Add identifier and appcast

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "skpm": {
     "name": "Symbol Namer",
     "manifest": "src/manifest.json",
+    "identifier": "com.gilesperry.symbol-namer",
+    "appcast": "https://api.sketchpacks.com/v1/plugins/com.gilesperry.symbol-namer/appcast",
     "main": "symbol-namer.sketchplugin",
     "assets": [
       "assets/**/*"
