--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "symbol-namer",
-  "description": "Rename symbol instances to their override text values",
+  "description": "A plugin to help you rename symbol instances. Rename symbol instances to their override text values, or set and use a default name.",
   "author": "Giles Perry <giles@gilesperry.info> (http://gilesperry.info/)",
   "version": "1.0.2",
   "engines": {
