--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "symbol-namer",
-  "description": "A plugin to help you rename symbol instances. Rename symbol instances to their override text values, or set and use a default name.",
+  "description": "A plugin to help you rename symbols. Save default values, use override text, and do powerful, pattern-based renaming.",
   "author": "Giles Perry <giles@gilesperry.info> (http://gilesperry.info/)",
   "version": "3.0.1",
   "engines": {
